--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -108,7 +108,9 @@ a {
 
 .reference-ui-header {
   padding: $sizeXL $sizeL;
+  z-index: 1;
   border-bottom: 1px solid $headerBorderColor;
+  min-height: 115px;
 
   &__title {
     font-weight: $fontWeightNormal;
@@ -144,8 +146,26 @@ a {
   display: flex;
   overflow: hidden;
   justify-content: center;
-  height: 50px;
   align-items: stretch;
+  // height: 100%;
+
+  .outer-wrapper {
+    position: relative;
+    width: 100%;
+    display: flex;
+  }
+
+  .query-suggestions-wrapper {
+    width: 100%;
+    height: auto;
+    outline: none;
+    display: flex;
+    border-radius: 3px;
+  }
+
+  .query-suggestions {
+    display: none;
+  }
 
   &__text-input {
     width: 100%;
@@ -153,6 +173,7 @@ a {
     border: 1px solid $searchboxBorderColor;
     padding: 0 1em;
     outline: none;
+    height: 50px;
 
     &::placeholder {
       color: #aaaaaa;
@@ -166,9 +187,86 @@ a {
   &__submit {
     padding: 0 2em;
     margin-left: 10px;
+    height: 50px;
 
     .live-filtering & {
       display: none;
+    }
+  }
+
+  &.query-suggest {
+    overflow: visible;
+    position: absolute;
+    width: calc(100% - 3em);
+    left: 0;
+    right: 0;
+    z-index: 1;
+
+    .searchbox__text-input {
+      border-bottom: none;
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+
+    .query-suggestions-wrapper {
+      width: 100%;
+      outline: none;
+      display: flex;
+      flex-direction: column;
+      // position: relative;
+      box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.2);
+    }
+
+    .query-suggestions {
+      // position: absolute;
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      top: 50px;
+      margin: 0;
+      padding: 1em 0;
+      line-height: 1.5;
+      background: white;
+      border-top: 1px solid #f0f0f0;
+      border-left: 1px solid #abb1b7;
+      border-right: 1px solid #abb1b7;
+      border-bottom: 1px solid #abb1b7;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+      border-bottom-left-radius: 3px;
+      border-bottom-right-radius: 3px;
+    }
+
+    .searchbox__text-input.focus + .query-suggestions {
+      border-left: 1px solid $linkColor;
+      border-right: 1px solid $linkColor;
+      border-bottom: 1px solid $linkColor;
+    }
+
+    .query-suggestions li {
+      padding: 0;
+      margin: 0;
+    }
+
+    .query-suggestions a {
+      color: #333333;
+      text-decoration: none;
+      display: block;
+      padding: 0 1em;
+
+      &:hover {
+        background: #f0f0f0;
+      }
+
+      &:focus {
+        outline: none;
+        background: #f0f0f0;
+      }
+    }
+
+    .query-suggestions em {
+      font-weight: bold;
+      font-style: normal;
     }
   }
 }
